--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pangolin"
   ],
   "scripts": {
-    "lint:js": "eslint -f codeframe *.js"
+    "lint": "eslint -f codeframe *.js"
   },
   "main": "index.js",
   "files": [
@@ -31,16 +31,16 @@
     "yarn.lock"
   ],
   "dependencies": {
-    "eslint-config-standard": "^12.0.0-alpha.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.4.0"
+    "eslint": "^5.8.0"
   },
   "peerDependencies": {
-    "eslint": "^5.2.0"
+    "eslint": "^5.8.0"
   }
 }
