--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pangolin"
   ],
   "scripts": {
-    "lint": "eslint -f codeframe *.js"
+    "lint": "eslint --config index.js -f codeframe *.js"
   },
   "main": "index.js",
   "files": [
@@ -32,13 +32,13 @@
   ],
   "dependencies": {
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.12.0"
+    "eslint": "^5.13.0"
   },
   "peerDependencies": {
     "eslint": "^5.10.0"
