--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pangolin"
   ],
   "scripts": {
-    "lint": "eslint --config index.js -f codeframe *.js",
+    "lint": "eslint -f codeframe --ignore-pattern !.eslintrc.js *.js",
     "release": "standard-version"
   },
   "main": ".eslintrc.js",
