--- a/package.json
+++ b/package.json
@@ -32,19 +32,23 @@
   "files": [
     "index.js"
   ],
-  "dependencies": {
+  "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
-  },
-  "devDependencies": {
+    "eslint-plugin-standard": "^4.0.1",
     "eslint": "^7.0.0",
     "standard-version": "^8.0.0"
   },
   "peerDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint": "^7.0.0"
   }
 }
