--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "author": {
     "name": "Fynn Becker",
-    "email": "post@fynn.be"
+    "email": "fynn@hey.com"
   },
   "bugs": {
     "url": "https://github.com/pangolinjs/eslint-config/issues",
-    "email": "post@fynn.be"
+    "email": "fynn@hey.com"
   },
   "keywords": [
     "eslint-config",
@@ -34,21 +34,21 @@
   ],
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "eslint": "^7.4.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint": "^7.0.0",
     "standard-version": "^8.0.0"
   },
   "peerDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint": "^7.0.0"
+    "eslint": "^7.4.0"
   }
 }
