--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "lint": "eslint --cache --format codeframe .",
+    "test": "eslint --print-config index.js",
     "release": "standard-version"
   },
   "main": "index.js",
