--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,5 @@ jobs:
           node-version: 14
       - name: Install dependencies
         run: npm ci
-      - name: Test JS
+      - name: Test configuration
         run: npm run test
