--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "scripts": {
-    "lint": "eslint --cache --format codeframe .",
+    "lint": "eslint --format codeframe .",
     "test": "eslint --print-config index.js",
     "release": "standard-version"
   },
@@ -34,7 +34,7 @@
     "index.js"
   ],
   "devDependencies": {
-    "eslint": "^7.8.0",
+    "eslint": "^7.8.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
@@ -48,6 +48,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint": "^7.8.0"
+    "eslint": "^7.8.1"
   }
 }
