--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "author": {
     "name": "Fynn Becker",
-    "email": "fynn@hey.com"
+    "email": "post@fynn.be"
   },
   "bugs": {
     "url": "https://github.com/pangolinjs/eslint-config/issues",
-    "email": "fynn@hey.com"
+    "email": "post@fynn.be"
   },
   "keywords": [
     "eslint-config",
@@ -31,18 +31,18 @@
     "index.js"
   ],
   "devDependencies": {
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "standard-version": "^9.2.0"
+    "eslint-plugin-promise": "^5.1.0",
+    "standard-version": "^9.3.0"
   },
   "peerDependencies": {
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
