--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "lint": "eslint --format codeframe .",
     "test": "eslint --print-config index.js",
-    "release": "standard-version"
+    "release": "standard-version --sign"
   },
   "main": "index.js",
   "files": [
