feat: Add simple-import-sort plugin
BREAKING CHANGE: Unsorted imports and exports will cause an error.

--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
 	"devDependencies": {
 		"eslint": "^8.27.0",
 		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-simple-import-sort": "^8.0.0",
 		"standard-version": "^9.5.0"
 	},
 	"peerDependencies": {
 		"eslint": "^8.27.0",
-		"eslint-config-standard": "^17.0.0"
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-simple-import-sort": "^8.0.0"
 	}
 }
